Fix the gap

--- a/web/src/App.css
+++ b/web/src/App.css
@@ -182,7 +182,7 @@ body {
 
 body {
   margin: 0px 0px 0px 0px;
-  padding: 70px 0px 0px 0px;
+  padding: 60px 0px 0px 0px;
   color: #555;
   display: flex;
   flex-direction: column;
